Updated documents for utility classes

--- a/index.html
+++ b/index.html
@@ -668,30 +668,33 @@
         text-align: center;
       }
 
+      /* Hides the element on mobiles and phablets */
       @media (max-width: 544px) {
         .hide-on-mobile {
           display: none;
         }
       }
 
+      /* Hides the element on tablets and smaller */
       @media (max-width: 768px) {
         .hide-on-tablet {
           display: none;
         }
       }
 
+      /* Hides the element on desktops */
       @media (min-width: 768px) {
         .hide-on-desktop {
           display: none;
         }
       }
 
+      /* Hides the element on non-mobile and non-phablets */
       @media (min-width: 544px) {
         .hide-on-non-mobile {
           display: none;
         }
       }
-
           </code>
         </pre>
       </div>
