Added viewport meta tag to make the page mobile-friendly

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <meta name="twitter:title" content="Meshki UI">
   <meta name="twitter:description" content="Meshki: A Black-Colored, Responsive Boilerplate for UI Development">
   <meta name="twitter:image" content="meta-image.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="dist/meshki.css">
   <link rel="stylesheet" type="text/css" href="custom.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
