Added button size (small, medium, large)

--- a/index.html
+++ b/index.html
@@ -150,21 +150,21 @@
           You can create buttons easily with &lt;a&gt;, &lt;button&gt;, &lt;input type="submit"&gt;, &lt;input type="reset"&gt; and &lt;input type="button"&gt;. There are also five different types of buttons:
         </p>
         <div class="centerize text-center">
-          <a class="button">Simple</a>
-          <button class="default">Default</button>
-          <input type="submit" class="success" value="Success" />
-          <input type="reset" class="danger" value="Danger" />
-          <input type="button" class="warning" value="Warning" />
+          <a class="button small">Simple</a>
+          <button class="default medium">Default</button>
+          <input type="submit" class="success large" value="Success" />
+          <input type="reset" class="danger medium" value="Danger" />
+          <input type="button" class="warning small" value="Warning" />
         </div><br>
       
         <span>Here's the code for them:</span><br><br>
           <pre>
             <code>
-    &lt;a class="button"&gt;Simple&lt;/a&gt;
-    &lt;button class="default"&gt;Default&lt;/button&gt;
-    &lt;input type="submit" class="success" value="Success" /&gt;
-    &lt;input type="reset" class="danger" value="Danger" /&gt;
-    &lt;input type="button" class="warning" value="Warning" /&gt;<div id="sidenav-doc"></div>
+    &lt;a class="button small"&gt;Simple&lt;/a&gt;
+    &lt;button class="default medium"&gt;Default&lt;/button&gt;
+    &lt;input type="submit" class="success large" value="Success" /&gt;
+    &lt;input type="reset" class="danger medium" value="Danger" /&gt;
+    &lt;input type="button" class="warning small" value="Warning" /&gt;<div id="sidenav-doc"></div>
             </code>
           </pre>
       </div>
