--- a/index.html
+++ b/index.html
@@ -74,9 +74,13 @@
     </div>
     <div class="container">
       <div class="row">
-        <h1 class="text-center title">Meshki</h2>
-                <h2 class="text-center">Stylish. Black. Responsive.</h2>
-            </div>
+        <h1 class="text-center title">Meshki</h1>
+        <h2 class="text-center">Stylish. Black. Responsive.</h2>
+      </div>
+
+      <div class="row text-center">
+        <a class="button large default" href="https://github.com/Borderliner/Meshki/archive/v0.4.3.zip">Download Meshki (v0.4.3)</a><br><br>
+      </div>
     
       <div class="row">
         <div class="four columns text-center">
