Added viewport meta tag to documents

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <p>
           Meshki is a simple, black-colored, responsive boilerplate to kickstart any responsive project. It is only ~13 KiB (minified) and ~30 KiB (normal), including both CSS and JS files, which makes it superb for small to medium projects. It's easy to use, clean and is just beautiful.
           It started as a fork of <a href="http://getskeleton.com" target="_blank">Skeleton</a> project, and it still uses some of the codes of it, Meshki is considered to be a total overhaul of Skeleton and it barely resembles it when you take a look at it.
-          Don't be afraid to have a look at Meshki's code! If you spot any bugs, or you want some improvements, head to <a id="components" href="https://github.com/Borderliner/Meshki" target="_blank">our GitHub repository</a> and open an issue or a pull request!
+          Don't be afraid to have a look at Meshki's code! If you spot any bugs, or you want some improvements, head to <a href="https://github.com/Borderliner/Meshki" target="_blank">our GitHub repository</a> and open an issue or a pull request!
         </p>
       </div>
 
@@ -114,7 +114,7 @@
           This is a valid question. There are tons of UI libraries out there in the wild, but what makes Meshki different?<br>
           Meshki tends to be light-weight, but useful. Contrary to most "light-weight" libraries, Meshki doesn't sacrifice usability for just being light-weight. This means that you don't need to reinvent the wheel, and many common components are ready to use you out-of-the-box. I mean, everybody can create libraries less than 5 KiB, but does it make them useful?<br>
           Also, Meshki strives to bring you a clean eye-candy interface, the black color doesn't hurt your eyes, and brings simplicity and elegance together. One of the main goals of Meshki is to be stable and reliable, so we try to provide you with updates and fixes as much as we can. Note that Meshki is still in alpha phase.<br>
-          Meshki and Skeleton have vast differences. Although Meshki is derived from Skeleton, it's far more complete than her parent. Just have a look at Skeleton's website. Most of the code there doesn't belong to original Skeleton and there are many custom CSS alongside the site. <b>But this website is pure Meshki</b>, and uses <a href="custom.css" target="_blank">custom.css</a> to customize website-related stuff.
+          Meshki and Skeleton have vast differences. Although Meshki is derived from Skeleton, it's far more complete than her parent. Just have a look at Skeleton's website. Most of the code there doesn't belong to original Skeleton and there are many custom CSS alongside the site. <b>But this website is pure Meshki</b>, and uses <a href="custom.css" id="components" target="_blank">custom.css</a> to customize website-related stuff.
         </p>
       </div>
 
@@ -131,6 +131,9 @@
     &lt;html>
     &lt;head>
       &lt;title>Meshki&lt;/title>
+      &lt;!-- Make the page Mobile-Friendly -->
+      &lt;meta name="viewport" content="width=device-width, initial-scale=1">
+
       &lt;link rel="stylesheet" type="text/css" href="dist/meshki.min.css">
       &lt;script type="text/javascript" src="dist/meshki.min.js">&lt;/script>
     &lt;/head>
