Fixed some typo and stuff in docs

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <hr>
         <p>
           This is a valid question. There are tons of UI libraries out there in the wild, but what makes Meshki different?<br>
-          Meshki tends to be light-weight, but useful. Contrary to most "light-weight" libraries, Meshki doesn't sacrifice usability for just being light-weight. This means that you don't need to reinvent the wheel, and many common components are ready to use you out-of-the-box. I mean, everybody can create libraries less than 5 KiB, but does it make them useful?<br>
+          Meshki tends to be light-weight, but useful. Contrary to most "light-weight" libraries, Meshki doesn't sacrifice usability for just being light-weight. This means that you don't need to reinvent the wheel, and many common components are ready for you to use out-of-the-box. I mean, everybody can create libraries less than 5 KiB, but does it make them useful?<br>
           Also, Meshki strives to bring you a clean eye-candy interface, the black color doesn't hurt your eyes, and brings simplicity and elegance together. One of the main goals of Meshki is to be stable and reliable, so we try to provide you with updates and fixes as much as we can. Note that Meshki is still in alpha phase.<br>
           Meshki and Skeleton have vast differences. Although Meshki is derived from Skeleton, it's far more complete than her parent. Just have a look at Skeleton's website. Most of the code there doesn't belong to original Skeleton and there are many custom CSS alongside the site. <b>But this website is pure Meshki</b>, and uses <a href="custom.css" id="components" target="_blank">custom.css</a> to customize website-related stuff.
         </p>
@@ -336,17 +336,17 @@
       <div class="row">
         <div class="six columns">
           <label for="user1">Username:</label>
-          <input id="user1" class="expand" type="text" name="user1" placeholder="Enter text here">
+          <input id="user1" class="expand" type="text" name="user1" placeholder="Enter your username">
         </div>
         <div class="six columns">
           <label for="pass1">Password:</label>
-          <input id="pass1" class="expand" type="password" name="pass1">
+          <input id="pass1" class="expand" type="password" name="pass1" placeholder="Enter your password">
         </div>
       </div>
       <div class="row">
         <div class="twelve columns">
           <label for="dis-email1">Email:</label>
-          <input id="dis-email1" class="expand" type="email" name="dis-email1" value="borderliner@borderliner.ir" disabled>
+          <input id="dis-email1" class="expand" type="email" name="dis-email1" value="me@borderliner.ir" disabled>
         </div>
       </div>
       <div class="row">
