--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         &lt;a href="http://borderliner.ir">About Me&lt;/a>
         &lt;a href="https://github.com/Borderliner/Meshki/blob/master/README.md">About Meshki&lt;/a>
         &lt;hr>
-        &lt;a href="#" disabled>Share on:&lt;/a>
+        &lt;a href="javascript:void(0)" disabled>Share on:&lt;/a>
       &lt;/div>
     .
     .
@@ -286,8 +286,23 @@
         </div>
         <div>
           <div class="eleven columns">ELEVEN</div>
-          <div class="one column">ONE</div>
+          <div class="one column" style="margin-bottom: 50px">ONE</div>
         </div>
+        <div>
+          <div class="six columns">NO OFFSET</div>
+          <div class="six columns">SIX</div>
+        </div>
+        <div>
+          <div class="six offset-by-two columns">OFFSET BY 1/6</div>
+          <div class="four columns">FOUR</div>
+        </div>
+        <div>
+          <div class="six offset-by-one-third columns">OFFSET BY 1/3</div>
+          <div class="two columns">TWO</div>
+        </div>
+        <div>
+          <div class="six offset-by-one-half columns">OFFSET BY 1/2</div>
+        </div> 
       </div>
       <div class="row">
         <p>
@@ -319,6 +334,15 @@
       &lt;/div&gt;
       &lt;div class="one-half column"&gt;
         A div with the other half of the screen's length
+      &lt;/div&gt;
+    &lt;/div&gt;
+
+    &lt;div class="row"&gt;
+      &lt;div class="six offset-by-two columns"&gt;
+        &lt;!-- Pushes a six-width-element by two units -->
+      &lt;/div&gt;
+      &lt;div class="two columns"&gt;
+        &lt;!-- The rest of the screen -->
       &lt;/div&gt;
     &lt;/div&gt;<div id="form-doc"></div>
 
@@ -390,7 +414,7 @@
           <label for="chk-news" class="checkbox">I wish to receive newsletters from this site.</label>
         </div>
       </div>
-      <div class="row">
+      <div class="row text-center">
         <button>Submit</button>
       </div>
       <div class="row">
@@ -458,7 +482,7 @@
         &lt;/div>
       &lt;/div>
       
-      &lt;div class="row">
+      &lt;div class="row text-center">
         &lt;button>Submit&lt;/button>
       &lt;/div>
     &lt;/form><div id="typography-doc"></div>
@@ -475,7 +499,7 @@
       </div>
       <div class="row">
         <div class="six columns">
-          The typography base is <a href="http://www.google.com/fonts/specimen/Raleway">Raleway</a>, which is served locally, set at 15rem (15px) over a 1.6 line height (24px). Other type basics like <a href="#">anchors</a>, <b>strong</b>, <i>emphasis</i>, and <u>underline</u> are all obviously included.
+          The typography base is <a href="https://fonts.google.com/specimen/Ubuntu">Ubuntu</a> font, which is served locally, set at 15rem (15px) over a 1.6 line height (24px). Other type basics like <a href="#">anchors</a>, <b>strong</b>, <i>emphasis</i>, and <u>underline</u> are all obviously included.
         </div>
         <div class="six columns">
           <h1>Heading <span class="heading-font-size"><code>&lt;h1></code> 50rem</span></h1>
