Added twitter username to meta tags

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:url" content="http://meshki.borderliner.ir"/>
   <meta property="og:description" content="Meshki: A Black-Colored, Responsive Boilerplate for UI Development"/>
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:url" content="http://meshki.borderliner.ir">
+  <meta name="twitter:site" content="@Meshki_UI">
   <meta name="twitter:title" content="Meshki UI">
   <meta name="twitter:description" content="Meshki: A Black-Colored, Responsive Boilerplate for UI Development">
   <meta name="twitter:image" content="meta-image.png">
