Hide navbar's search input on tablet and lower

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a href="#footer-doc">Footer</a>
           </div>
         </li>
-        <li class="nav-right hide-on-mobile"><input type="text" name="" placeholder="Search..."></li>
+        <li class="nav-right hide-on-tablet"><input type="text" name="" placeholder="Search..."></li>
       </ul>
     </div>
     <div class="container">
