Removed fixed navbar. It was a plague!

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </div>
   <div class="content">
     <div>
-      <ul class="nav fixed">
+      <ul class="nav">
         <li><a class="logo" href="javascript:void(0);" onclick="meshki.openNav()">Meshki</a></li>
         <li><a href="https://github.com/Borderliner/Meshki/releases">News</a></li>
         <li><a href="https://github.com/Borderliner/Meshki">GitHub</a></li>
@@ -70,6 +70,7 @@
           </div>
         </li>
         <li class="nav-right hide-on-tablet"><input type="text" name="" placeholder="Search..."></li>
+        <li class="nav-right hide-on-tablet"><button class="success">GO!</button></li>
       </ul>
     </div>
     <div class="container">
