Changed anchor tag's default color

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         </div>
       </div>
       <div class="row text-center">
-        <button>Submit</button>
+        <button class="success">Submit</button>
       </div>
       <div class="row">
         <p>
