Updated info for the next release, v0.5.1

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <li><a href="https://github.com/Borderliner/Meshki/releases">News</a></li>
         <li><a href="https://github.com/Borderliner/Meshki">GitHub</a></li>
         <li class="nav-dropdown hide-on-mobile">
-          <a href="#components" class="nav-dropdown-button">Components</a>
+          <a href="javascript:void(0)" class="nav-dropdown-button">Components</a>
           <div class="nav-dropdown-content">
             <a href="#buttons-doc">Buttons</a>
             <a href="#sidenav-doc">Sidenav</a>
@@ -83,7 +83,7 @@
       </div>
 
       <div class="row text-center">
-        <a class="button large default" href="https://github.com/Borderliner/Meshki/archive/v0.5.0.zip">Download Meshki (v0.5.0)</a><br><br>
+        <a class="button large default" href="https://github.com/Borderliner/Meshki/archive/v0.5.1.zip">Download Meshki (v0.5.1)</a><br><br>
       </div>
     
       <div class="row">
