Added CDNJS links for Meshki

--- a/index.html
+++ b/index.html
@@ -83,8 +83,15 @@
       </div>
 
       <div class="row text-center">
-        <a class="button large default" href="https://github.com/Borderliner/Meshki/archive/v0.5.1.zip">Download Meshki (v0.5.1)</a><br><br>
-      </div>
+        <a class="button large default" href="https://github.com/Borderliner/Meshki/archive/v0.5.1.zip">Download Meshki (v0.5.1)</a><br>Or<br>
+        <a class="button large danger" href="javascript:void(0)" onclick="document.getElementById('cdn').style.display = 'block';">Use CDN</a><br>
+        <pre id="cdn">
+          <code>
+https://cdnjs.cloudflare.com/ajax/libs/meshki/0.5.1/meshki.min.css
+https://cdnjs.cloudflare.com/ajax/libs/meshki/0.5.1/meshki.min.js
+          </code>
+        </pre>
+      </div><br>
     
       <div class="row">
         <div class="four columns text-center">
