--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ https://cdnjs.cloudflare.com/ajax/libs/meshki/0.5.1/meshki.min.js
         </div>
       </div>
       <div class="row text-center">
-        <button class="success">Submit</button>
+        <button class="default">Submit</button>
       </div>
       <div class="row">
         <p>
