Changed footer a bit

--- a/index.html
+++ b/index.html
@@ -752,11 +752,16 @@ https://cdnjs.cloudflare.com/ajax/libs/meshki/0.5.1/meshki.min.js
           </code>
         </pre>
       </div>
+      <div class="row">
+        <p>
+          This website uses the awesome "<a href="http://fontawesome.io/" target="_blank">font-awesome</a>" to display icons and such. It is by far the best font icon set I've ever encountered. Make sure to check out their website.
+        </p>
+      </div>
     </div>
     <footer class="compact">
       <div class="row">
         <div class="six columns">
-          <p>Created with &hearts; by Mohammad reza Hajianpour (<a href="https://github.com/Borderliner">Borderliner</a>)</p>
+          <p>Created with <i class="fa fa-heart custom-love"></i> by Mohammad reza Hajianpour (<a href="https://github.com/Borderliner">Borderliner</a>)</p>
         </div>
         <div class="six columns custom-text-right">
           <p>2016, Licensed under <a href="https://github.com/Borderliner/Meshki/blob/master/LICENSE.md">MIT</a></p>
