--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
       </div>
 
       <div class="row text-center">
-        <a class="button large default" href="https://github.com/Borderliner/Meshki/archive/v0.5.1.zip">Download Meshki (v0.5.1)</a><br>Or<br>
-        <a class="button large danger" href="javascript:void(0)" onclick="document.getElementById('cdn').style.display = 'block';">Use CDN</a><br>
+        <a class="button large default custom-down-cdn" href="https://github.com/Borderliner/Meshki/archive/v0.5.1.zip">Download Meshki (v0.5.1)</a><br>Or<br>
+        <a class="button large danger custom-down-cdn" href="javascript:void(0)" onclick="document.getElementById('cdn').style.display = 'block';">Use CDN</a><br>
         <pre id="cdn">
           <code>
 https://cdnjs.cloudflare.com/ajax/libs/meshki/0.5.1/meshki.min.css
@@ -184,6 +184,10 @@ https://cdnjs.cloudflare.com/ajax/libs/meshki/0.5.1/meshki.min.js
           <input type="submit" class="success large" value="Success" />
           <input type="reset" class="danger medium" value="Danger" />
           <input type="button" class="warning small" value="Warning" />
+          <br><br>
+          <button class="default expand small">Small Expanded Button</button>
+          <button class="danger expand medium">Medium Expanded Button</button>
+          <button class="expand large">Large Expanded Button</button>
         </div><br>
       
         <span>Here's the code for them:</span><br><br>
@@ -193,7 +197,9 @@ https://cdnjs.cloudflare.com/ajax/libs/meshki/0.5.1/meshki.min.js
     &lt;button class="default medium"&gt;Default&lt;/button&gt;
     &lt;input type="submit" class="success large" value="Success" /&gt;
     &lt;input type="reset" class="danger medium" value="Danger" /&gt;
-    &lt;input type="button" class="warning small" value="Warning" /&gt;<div id="sidenav-doc"></div>
+    &lt;input type="button" class="warning small" value="Warning" /&gt;
+
+    &lt;button class="expand large"&gt;Large Expanded Button&lt;/button&gt;<div id="sidenav-doc"></div>
             </code>
           </pre>
       </div>
@@ -426,7 +432,7 @@ https://cdnjs.cloudflare.com/ajax/libs/meshki/0.5.1/meshki.min.js
         </div>
       </div>
       <div class="row text-center">
-        <button class="default">Submit</button>
+        <button class="default expand">Submit</button>
       </div>
       <div class="row">
         <p>
@@ -494,7 +500,7 @@ https://cdnjs.cloudflare.com/ajax/libs/meshki/0.5.1/meshki.min.js
       &lt;/div>
       
       &lt;div class="row text-center">
-        &lt;button>Submit&lt;/button>
+        &lt;button class="expand">Submit&lt;/button>
       &lt;/div>
     &lt;/form><div id="typography-doc"></div>
             </code>
