Add bars icon to menu

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="content">
     <div>
       <ul class="nav">
-        <li><a class="logo" href="javascript:void(0);" onclick="meshki.openNav()">Meshki</a></li>
+        <li><a class="logo" href="javascript:void(0);" onclick="meshki.openNav()"><i class="fa fa-bars" aria-hidden="true"></i>Meshki</a></li>
         <li><a href="https://github.com/Borderliner/Meshki/releases">News</a></li>
         <li><a href="https://github.com/Borderliner/Meshki">GitHub</a></li>
         <li class="nav-dropdown hide-on-mobile">
@@ -94,7 +94,7 @@ https://cdnjs.cloudflare.com/ajax/libs/meshki/0.5.2/meshki.min.js
         </pre>
       </div><br>
     
-      <div class="row">
+      <div class="row meshki-features">
         <div class="four columns text-center">
           <i class="fa fa-clock-o" aria-hidden="true"></i><br>
           <span>Design your whole UI in absolutely no time. We have done our best to keep Meshki stupidly simple and clean.</span>
