Change search button's text to a font-awesome icon

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
         </li>
         <li class="nav-right hide-on-tablet"><input type="text" name="" placeholder="Search..."></li>
-        <li class="nav-right hide-on-tablet"><button class="success">GO!</button></li>
+        <li class="nav-right hide-on-tablet"><button class="success"><i class="fa fa-search" aria-hidden="true"></i></button></li>
         <li class="nav-right hide-on-tablet"><iframe src="https://ghbtns.com/github-btn.html?user=borderliner&repo=meshki&type=star&count=true&size=large" frameborder="0" scrolling="0" width="160px" height="30px" style="margin-top:3px;position:relative;left:20px;opacity:0.95;"></iframe></li>
       </ul>
     </div>
