Updated info for the next release

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
       </div>
 
       <div class="row text-center">
-        <a class="button large default custom-down-cdn" href="https://github.com/Borderliner/Meshki/archive/v0.5.2.zip">Download Meshki (v0.5.2)</a><br>Or<br>
+        <a class="button large default custom-down-cdn" href="https://github.com/Borderliner/Meshki/archive/v0.5.2.zip">Download Meshki (v1.2.0)</a><br>Or<br>
         <a class="button large danger custom-down-cdn" href="javascript:void(0)" onclick="document.getElementById('cdn').style.display = 'block';">Use CDN</a><br>
         <pre id="cdn">
           <code>
-https://cdnjs.cloudflare.com/ajax/libs/meshki/0.5.2/meshki.min.css
-https://cdnjs.cloudflare.com/ajax/libs/meshki/0.5.2/meshki.min.js
+https://cdnjs.cloudflare.com/ajax/libs/meshki/1.2.0/meshki.min.css
+https://cdnjs.cloudflare.com/ajax/libs/meshki/1.2.0/meshki.min.js
           </code>
         </pre>
       </div><br>
@@ -517,7 +517,7 @@ https://cdnjs.cloudflare.com/ajax/libs/meshki/0.5.2/meshki.min.js
       </div>
       <div class="row">
         <div class="six columns">
-          The typography base is <a href="https://fonts.google.com/specimen/Ubuntu">Ubuntu</a> font, which is served locally, set at 15rem (15px) over a 1.6 line height (24px). Other type basics like <a href="#">anchors</a>, <b>strong</b>, <i>emphasis</i>, and <u>underline</u> are all obviously included.
+          The typography base is <a href="https://fonts.google.com/specimen/Open+Sans">Open Sans</a> font, which is served locally, set at 15rem (15px) over a 1.6 line height (24px). Other type basics like <a href="#">anchors</a>, <b>strong</b>, <i>emphasis</i>, and <u>underline</u> are all obviously included.
         </div>
         <div class="six columns">
           <h1>Heading <span class="heading-font-size"><code>&lt;h1></code> 50rem</span></h1>
