Add new modern front page

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <h2 class="text-center">Stylish. Black. Responsive.</h2>
       </div>
 
-      <div class="row text-center">
-        <a class="button large default custom-down-cdn" href="https://github.com/Borderliner/Meshki/archive/v0.5.2.zip">Download Meshki (v1.2.0)</a><br>Or<br>
+      <div class="row text-center" style="margin-bottom: 175px;margin-top: 20px;">
+        <a class="button large default custom-down-cdn" href="https://github.com/Borderliner/Meshki/archive/v1.2.0.zip">Download Meshki (v1.2.0)</a><br>Or<br>
         <a class="button large danger custom-down-cdn" href="javascript:void(0)" onclick="document.getElementById('cdn').style.display = 'block';">Use CDN</a><br>
         <pre id="cdn">
           <code>
@@ -97,11 +97,11 @@ https://cdnjs.cloudflare.com/ajax/libs/meshki/1.2.0/meshki.min.js
       <div class="row meshki-features">
         <div class="four columns text-center">
           <i class="fa fa-clock-o" aria-hidden="true"></i><br>
-          <span>Design your whole UI in absolutely no time. We have done our best to keep Meshki stupidly simple and clean.</span>
+          <span>Design your whole UI in absolutely no time. We have done our best to keep Meshki stupidly simple and clean, and bring you an up-to-date document for your convenience.</span>
         </div>
         <div class="four columns text-center">
-          <i class="fa fa-smile-o" aria-hidden="true"></i><br>
-          <span>Code while smiling. Meshki is easy to use and edit. Just grab a text editor and start building your web pages in total elegance.</span>
+          <i class="fa fa-eye" aria-hidden="true"></i><br>
+          <span>We care for your eyes! Making use of a pleasant dark color, your eyes will feel at ease when reading pages that use Meshki. This is very important in web pages with plenty of textual contents.</span>
         </div>
         <div class="four columns text-center">
           <i class="fa fa-rocket" aria-hidden="true"></i><br>
