Add Vertical Line element

--- a/index.html
+++ b/index.html
@@ -733,6 +733,11 @@ https://cdnjs.cloudflare.com/ajax/libs/meshki/1.2.0/meshki.min.js
         text-align: center;
       }
 
+      /* Vertical line */
+      .vertical-line {
+        border-left: 1px solid #E1E1E1;
+      }
+
       /* Hides the element on mobiles and phablets */
       @media (max-width: 544px) {
         .hide-on-mobile {
