Add vertical line between sizes in Media Queries part

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ https://cdnjs.cloudflare.com/ajax/libs/meshki/1.2.0/meshki.min.js
             <li><b>Tablet</b>: 768px</li>
           </ul>
         </div>
-        <div class="six columns">
+        <div class="six columns vertical-line">
           <ul>
             <li><b>Phablet</b>: 544px</li>
             <li><b>Mobile</b>: 400px</li>
